Fix sizing / alignment of (custom) logos inside navbar

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/new-manager/applications.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/new-manager/applications.scss
@@ -38,11 +38,25 @@ body {
   padding-top: 3px;
   box-shadow: 0px 1px 8px rgba(191, 191, 191, 0.5);
 
-  .logoContainer {
-
-    .logo {
-      width: 120px;
+  .navbar-brand {
+    // Reduce top/bottom padding on Bootstrap .navbar-brand (default 15px) to show the logo a bit larger
+    padding-top: 5px;
+    padding-bottom: 5px;
+    // For .logo's vertical alignment to work, it needs an inline-block sibling element with full height
+    // see https://stackoverflow.com/a/7310398
+    &:before {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      height: 100%;
     }
+  }
+  .logo {
+    max-width: 120px;
+    max-height: 100%;
+  }
+  .navbar-brand>img.logo {
+    display: inline-block;  // revert Bootstrap default block on .navbar-brand>img to allow vertical-align to take effect
   }
 }
 
